envoy_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    container.label: envoy-service
  name: envoy-proxy-serv
spec:
  type: NodePort 
  selector:
    container: envoy-container
  ports:
  - name: admin
    protocol: TCP
    port: 9901
    targetPort: 9901
  - name: listener
    protocol: TCP
    port: 8080
    targetPort: 8080
