go_pod.yaml
  apiVersion: v1
  kind: Pod
  metadata:
    labels:
      container.label: go-container
    name: go-mockserver-pod
  spec:
    containers:
      image: modelzoo/go
      imagePullPolicy: Always
      name: goContainer
      ports:
        - containerPort: 9090
      restartPolicy: Always
