go_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    container.label: go-service
  name: go-mockserver-serv
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
spec:
  type: LoadBalancer
  selector:
    container.label: go-deployment
  ports:
  - protocol: http
    port: 9090
    targetPort: 9090
