js_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jsserverserv
spec:
  clusterIP: None
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    container: jscontainer
